--- a/cssmagic.html
+++ b/cssmagic.html
@@ -84,7 +84,7 @@
         </div>
     </div>
     <audio loop="1">
-        <source src="C:/Users/Gép/OneDrive/Dokumentumok/HTML játékok/Html Gyakorló/Css gyak/Zenek/Alfons - Ganjaman.mp3">
+        <source src="Css gyak/Zenek/Alfons - Ganjaman.mp3">
     </audio>
 
     
