--- a/spend.html
+++ b/spend.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiadás követő</title>
     <link rel="stylesheet" href="SpendTracker/spendStyle.css">
-    <link rel="stylesheet" href="C:/Users/Gép/OneDrive/Dokumentumok/HTML játékok/Html Gyakorló/Navbar/navbar.css">
+    <link rel="stylesheet" href="Navbar/navbar.css">
     <script src="https://kit.fontawesome.com/4455646216.js" crossorigin="anonymous"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
